Setup of initial structure, made changes from original template

--- a/Dedication/dedication.tex
+++ b/Dedication/dedication.tex
@@ -2,7 +2,9 @@
 
 \begin{dedication} %this creates the heading for the dedication page
 
-This thesis is dedicated to someone.
+This thesis is dedicated to my Mum, without her help these past 26 years, there's no way I would have written this.
+
+I'll pay you back I promise!
 
 \end{dedication}
 
