Wrote a bit more! Devised structure to background, lots of comments, some writing Some new tables + terminology Moved to BibLaTeX over BibTeX!

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -1,18 +1,26 @@
 \begin{abbreviations}
 
 \begin{table}[h]
-\centering
-\begin{tabular}{ll}
+  \centering
+  \begin{tabular}{l|l|l}
+    
+    \hline
 
-CWB & Colliding Wind Binary \\
-WC  & WR Carbon Phase \\
-WCd & Dust forming WC star \\
-WN  & WR Nitrogen Phase \\
-WO  & WR Oxygen Phase \\
-WR  & Wolf-Rayet \\
+    CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
+    GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
+    OB  & O or B type star & Section \ref{sec:obtype} \\ 
+    WC  & WR Carbon Phase & Section \ref{sec:wrtype} \\
+    WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
+    WCR & Wind Collision Region & Section \ref{sec:wcr} \\
+    WN  & WR Nitrogen Phase & Section \ref{sec:wrtype} \\
+    WO  & WR Oxygen Phase & Section \ref{sec:wrtype} \\
+    WR  & Wolf-Rayet & Section \ref{sec:wrtype} \\
 
-\end{tabular} 
-\label{tbl:Abbreviations}
-\end{table}
+    \hline
+
+  \end{tabular} 
+  \label{tbl:Abbreviations}
+  \caption{List of common abbreviations, if an abbreviation is important enough to warrant a subsection it is referenced}
+  \end{table}
 
 \end{abbreviations}
