--- a/Common_Symbols/Common_Symbols.tex
+++ b/Common_Symbols/Common_Symbols.tex
@@ -2,29 +2,45 @@
 
 \begin{table}[h]
   \centering
-  \begin{tabular}{lll}
+  \begin{tabular}{l|l|l}
+    \hline
 
     $\eta$ & Wind momentum ratio  & \\
     $\chi$ & Cooling parameter  & \\
     $\Lambda(T)$ & Cooling function & \\
     $a$ & Grain radius & \\
     $z$ & Dust-to-gas mass ratio  & \\
-    
+    $M_*$ & Stellar mass & \\
+    $L_*$ & Stellar luminosity & \\
+    $\dot M$ & Mass loss rate & \\
+    $v_\infty$ & Wind terminal velocity & \\
+    $C$ & Courant-Friedrichs-Lewy condition & \\
 
+    $\tau_{KH}$ & Kelvin-Helmholtz timescale & Equation \ref{eq:khtime} \\
+    $\tau_{ff}$ & Free-fall timescale & Equation \ref{eq:fftime} \\
+
+    \hline
   \end{tabular}
   \label{tbl:Common_Symbols}
+  \caption{List of common symbols, if symbol requires a derivation, the appropriate equation is referenced}
 \end{table}
 
 \begin{table}[h]
   \centering
-  \begin{tabular}{lll}
-    
+  \begin{tabular}{l|l|l}
+    \hline
+
     \si{\solarmass} & Solar mass & \num{1.988e+33} \si{\gram} \\
-    \si{\solarluminosity} & Solar Luminosity & \num{3.828e+33} \si{\erg\per\second} 
+    \si{\solarmass\per\year} & Solar mass per year & \num{6.301e+25} \si{\gram\per\second} \\
+    \si{\solarluminosity} & Solar Luminosity & \num{3.828e+33} \si{\erg\per\second} \\
+    \si{\au} & Astronomical Unit & \num{1.496e+13} \si{\centi\metre} \\
+    \si{\pc} & Parsec & \num{3.086e+18} \si{\centi\metre} \\
   
+    \hline
   \end{tabular}
   \label{tbl:Common_units}
+  \caption{List of common units, with value in CGS units}
   \end{table}
-  
+
 
 \end{Common_Symbols}
