Additons to background, OB section nearly complete Fleshed out most of background in comments, need to start writing proper TODO: - Finish OB section on influence in surrounding environment - Add more scientific context, flesh out a bit more

--- a/Abbreviations/Abbreviations.tex
+++ b/Abbreviations/Abbreviations.tex
@@ -8,7 +8,9 @@
 
     CWB & Colliding Wind Binary  & Section \ref{sec:obtype} \\
     GMC & Giant Molecular Cloud & Section \ref{sec:obtype}\\
+    LBV & Luminous Blue Variable & Section \ref{sec:obtype} \\
     OB  & O or B type star & Section \ref{sec:obtype} \\ 
+    RSG & Red Supergiant & Secion \ref{sec:obtype} \\
     WC  & WR Carbon Phase & Section \ref{sec:wrtype} \\
     WCd & Dust forming WC star & Section \ref{sec:cwbdust} \\
     WCR & Wind Collision Region & Section \ref{sec:wcr} \\
